inscription/connexion/deconnexion côté back

--- a/src/views/connexion/login.ejs
+++ b/src/views/connexion/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Connexion</h1>
-    <form action="/user/login" method="post">
+    <form action="/users/login" method="post">
         <% if (typeof error !== 'undefined' && error) { %>
             <div class="alert alert-danger" role="alert">
                 <%= error %>
