--- a/src/views/connexion/register.ejs
+++ b/src/views/connexion/register.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Inscription</h1>
 
-    <form action="/user/register" method="post">
+    <form action="/users/register" method="post">
         <% if (typeof errors !== 'undefined' && errors.length > 0) { %>
             <div class="alert alert-danger" role="alert">
                 <% errors.forEach(error => { %>
