branchement front et back pour la connexion et l'inscription

--- a/src/views/connexion/login.ejs
+++ b/src/views/connexion/login.ejs
@@ -158,7 +158,7 @@
                 
                 <h1>Welcome back !</h1>
                 
-                <form>
+                <form action="/users/login" method="post">
                     <!-- Gestion d'erreurs -->
                     <% if (typeof error !== 'undefined' && error) { %>
                         <div class="alert alert-danger" role="alert">
