branchement + securisation page connexion employe

--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -6,7 +6,7 @@
     <title>Dashboard Agence</title>
 </head>
 <body>
-    <h1>Dashboard Agence de Rouen</h1>
+    <h1>Dashboard <%= agence.nom %></h1>
     
 </body>
 </html>
