--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container">
-            <a class="navbar-brand" href="#">AutoClean Pro</a>
+            <a class="navbar-brand" href="/">AutoClean Pro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
                     </li>
                     <li class="nav-item ms-lg-3">
                         <a class="btn btn-primary rounded-pill px-4" href="users/login">Connexion</a>
-                        <a class="btn btn-primary rounded-pill px-4" href="#">Réserver</a>
+                        <a class="btn btn-primary rounded-pill px-4" href="rendez-vous/prendre-rdv">Réserver</a>
                     </li>
                 </ul>
             </div>
