--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,9 +37,25 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item ms-lg-3">
-                        <a class="btn btn-primary rounded-pill px-4" href="users/login">Connexion</a>
-                        <a class="btn btn-primary rounded-pill px-4" href="rendez-vous/prendre-rdv">Réserver</a>
+                        <% if (!user) { %>
+                            <a class="btn btn-primary rounded-pill px-4" href="/users/login">Connexion</a>
+                        <% } else { %>
+                            <div class="d-inline-flex align-items-center">
+                                <a class="btn btn-primary rounded-pill px-4 me-3" href="/rendez-vous/prendre-rdv">Réserver</a>
+                                <div class="dropdown">
+                                    <a class="btn btn-light rounded-pill p-2 dropdown-toggle" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="fas fa-user"></i>
+                                        Bonjour <%= user.prenom %> !
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                                        <li><a class="dropdown-item" href="/users/profile">Mon profil</a></li>
+                                        <li><a class="dropdown-item" href="/users/logout">Se déconnecter</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        <% } %>
                     </li>
+                    
                 </ul>
             </div>
         </div>
@@ -105,7 +121,7 @@
                 <div class="col-md-4">
                     <div class="d-flex align-items-start">
                         <div class="service-icon me-3">
-                            <i class="fas fa-car-wash"></i>
+                            <i class="fas fa-car"></i>
                         </div>
                         <div>
                             <h4>Lavage Extérieur de Haute Qualité</h4>
@@ -117,8 +133,7 @@
                 <div class="col-md-4">
                     <div class="d-flex align-items-start">
                         <div class="service-icon me-3">
-                            <i class="fas fa-vacuum-cleaner"></i>
-                        </div>
+                            <i class="fa-solid fa-spray-can-sparkles"></i>                        </div>
                         <div>
                             <h4>Nettoyage Intérieur Complet et Soigné</h4>
                             <p class="text-muted">Notre service de nettoyage intérieur inclut l'aspiration, le nettoyage des surfaces et la désinfection pour un habitacle comme neuf.</p>
@@ -371,7 +386,7 @@
             <hr class="my-4 bg-white opacity-25">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="text-white opacity-75 small">© 2023 AutoClean Pro. Tous droits réservés.</p>
+                    <p class="text-white opacity-75 small">© 2025 AutoClean Pro. Tous droits réservés.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="text-white opacity-75 small">
