--- a/src/views/client/setting.ejs
+++ b/src/views/client/setting.ejs
@@ -15,40 +15,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 <body>
+    
+    <%- include('../partials/sidebar.ejs') %>
 
-    <!-- Sidebar -->
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 250px; height: 100vh; position: fixed;">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-            <span class="fs-4">AutoClean Pro</span>
-        </a>
-    
-        
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-                <a href="/users/profile" class="nav-link link-dark">
-                    <i class="fas fa-calendar-alt me-2"></i> Mon profil
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/rendez-vous" class="nav-link link-dark">
-                    <i class="fas fa-calendar-alt me-2"></i> Mes rendez-vous
-                </a>
-            </li>
-            <li>
-                <a href="/users/settings" class="nav-link link-dark">
-                    <i class="fas fa-cog me-2"></i> Paramètres
-                </a>
-            </li>
-        </ul>
-    
-        <!-- Séparé du menu, et avec mt-auto pour descendre tout en bas -->
-        <div class="mt-auto">
-            <a href="/users/logout" class="nav-link link-dark">
-                <i class="fa-solid fa-right-from-bracket me-2"></i> Se déconnecter
-            </a>
-        </div>
-    </div>
-    
         <div class="container">
             <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
