--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/rendez-vous" class="nav-link link-dark">
+            <a href="/users/mes-rendez-vous" class="nav-link link-dark">
                 <i class="fas fa-calendar-alt me-2"></i>Mes rendez-vous
             </a>
         </li>
