--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -6,7 +6,16 @@
     <title>Dashboard Agence</title>
 </head>
 <body>
-    <h1>Dashboard <%= agence.nom %></h1>
+
+    <%- include('../partials/sidebar.ejs') %>
+
+        <div class="container">
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-6">
+                    <h1 class="text-center">Dashboard <%= agence.nom %></h1>
+                </div>
+            </div>
+        </div>
     
 </body>
 </html>
