Amélioration du front-end

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -71,9 +71,7 @@
                     <a href="#" class="btn btn-primary rounded-pill px-4 py-2 me-2">Réserver maintenant</a>
                 </div>
                 <div class="col-lg-6">
-                    <div class="placeholder-img">
-                        <i class="fas fa-image fa-3x"></i>
-                    </div>
+                    <div class="placeholder-img"></div>
                 </div>
             </div>
         </div>
