--- a/src/public/style.css
+++ b/src/public/style.css
@@ -137,7 +137,10 @@ font-size: 1.2rem;
 }
 
 .placeholder-img {
-background-color: var(--tertiary);
+background-image: url(images/BG.jpg);
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
 width: 100%;
 height: 100%;
 min-height: 300px;
